Scrollbar fix.

--- a/Surfaccounts/theme/css/surfaccounts.less
+++ b/Surfaccounts/theme/css/surfaccounts.less
@@ -211,6 +211,8 @@
     }
     #nav-sidebar {
       .transition(height .3s);
+      overflow-x: hidden;
+      overflow-y: auto;
       >ul {
         line-height: 1;
         li {
